<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E2B35"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Starscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/starscore"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/starLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Starscore"
        app:srcCompat="@drawable/icn_star_gold_lg_hdpi" />

    <TextView
        android:id="@+id/totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="50%"
        android:textColor="@color/cardview_light_background"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/starLogo"
        app:layout_constraintTop_toBottomOf="@+id/Starscore"
        tools:text="50%" />

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="0.11dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="8dp"
        android:background="#39495A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:text="@string/average_rating"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Average Rating" />

    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/review_recency"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/reputation"
        app:layout_constraintEnd_toEndOf="@+id/average"
        app:layout_constraintTop_toBottomOf="@+id/average"
        tools:text="Review Recency" />

    <TextView
        android:id="@+id/reputation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reputation"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="@+id/review"
        app:layout_constraintTop_toBottomOf="@+id/review"
        tools:text="Reputation" />

    <TextView
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/responsiveness"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/reputation"
        app:layout_constraintTop_toBottomOf="@+id/reputation"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Responsiveness" />

    <ImageView
        android:id="@+id/helpIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/response"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_info_outline_black_24dp" />

    <Button
        android:id="@+id/infoBttn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_marginEnd="143dp"
        android:text="@string/what_is_this"
        android:textAllCaps="false"
        android:textColor="#26A1D6"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/helpIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/helpIcon"
        app:layout_constraintVertical_bias="0.555" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#63C0C0C0"
        app:contentPadding="0.2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2A3844" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/staticResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="120dp"
                android:text="@string/improve_your_responsiveness"
                android:textColor="@color/cardview_light_background"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dynResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/textview"
                android:textColor="@color/cardview_light_background"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/staticResponse"
                app:layout_constraintTop_toBottomOf="@+id/staticResponse"
                app:layout_constraintVertical_bias="0.0"
                tools:text="5 reviews awaiting response" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>